add authorization and rol model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,14 @@ spring.http.multipart.max-file-size=20MB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+# Configuraci\u00f3n del correo electr\u00f3nico
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=entiendacompro@gmai..com
+spring.mail.password=entienda1234
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
 
